[gd_scene load_steps=19 format=2]

[ext_resource path="res://Levels/TutorialRoom.gd" type="Script" id=1]
[ext_resource path="res://Tiles/TileWall.tres" type="TileSet" id=2]
[ext_resource path="res://Tiles/TileFloor.tres" type="TileSet" id=3]
[ext_resource path="res://ocean_overlay.tres" type="Texture" id=4]
[ext_resource path="res://Enemy/angler_entrance.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/PixelMusketeer-vEXO.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Levels/LightsPlates.gd" type="Script" id=7]
[ext_resource path="res://Levels/Message.gd" type="Script" id=8]
[ext_resource path="res://Assets/Note.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Lever/LightLever.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Plate/PressurePlate.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Lights/Light.tscn" type="PackedScene" id=13]
[ext_resource path="res://Enemy/MainEnemy.tscn" type="PackedScene" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.729412, 0.6, 0.180392, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0.611765, 0.45098, 0.14902, 0.6 )
shadow_size = 1
shadow_offset = Vector2( 16, 16 )

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 52
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="TileSet" id=4]
0/name = "ocean_overlay.tres 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 320, 320 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Room0" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LightsOff" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.0235294, 0.0313726, 0.027451, 1 )

[node name="LevelNavigation" type="Navigation2D" parent="." groups=[
"LevelNavigation",
]]

[node name="TileFloor" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 320, 320 )
format = 1
tile_data = PoolIntArray( -1, 13, 0, -65536, 13, 0, -65535, 13, 0, -65534, 13, 0, -65533, 13, 0, 65535, 13, 0, 0, 9, 0, 1, 12, 0, 2, 10, 0, 3, 13, 0, 131071, 13, 0, 65536, 1, 0, 65537, 0, 0, 65538, 2, 0, 65539, 13, 0, 196607, 13, 0, 131072, 1, 0, 131073, 0, 0, 131074, 2, 0, 131075, 13, 0, 262143, 13, 0, 196608, 1, 0, 196609, 0, 0, 196610, 2, 0, 196611, 13, 0, 327679, 13, 0, 262144, 1, 0, 262145, 0, 0, 262146, 2, 0, 262147, 13, 0, 393215, 13, 0, 327680, 1, 0, 327681, 0, 0, 327682, 2, 0, 327683, 13, 0, 458751, 13, 0, 393216, 1, 0, 393217, 0, 0, 393218, 2, 0, 393219, 13, 0, 524287, 13, 0, 458752, 1, 0, 458753, 0, 0, 458754, 2, 0, 458755, 13, 0, 589823, 13, 0, 524288, 1, 0, 524289, 0, 0, 524290, 2, 0, 524291, 13, 0, 655359, 13, 0, 589824, 1, 0, 589825, 0, 0, 589826, 2, 0, 589827, 13, 0, 720895, 13, 0, 655360, 1, 0, 655361, 0, 0, 655362, 2, 0, 655363, 13, 0, 786431, 13, 0, 720896, 3, 0, 720897, 11, 0, 720898, 4, 0, 720899, 13, 0, 851967, 13, 0, 786432, 13, 0, 786433, 13, 0, 786434, 13, 0, 786435, 13, 0 )

[node name="LightsPlates" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Plates" type="Node2D" parent="LightsPlates"]

[node name="PressurePlate" parent="LightsPlates/Plates" instance=ExtResource( 12 )]
position = Vector2( 469.509, 2776.63 )

[node name="Timer1" type="Timer" parent="LightsPlates"]
one_shot = true

[node name="Timer2" type="Timer" parent="LightsPlates"]
one_shot = true

[node name="Timer3" type="Timer" parent="LightsPlates"]
one_shot = true

[node name="Timer4" type="Timer" parent="LightsPlates"]
one_shot = true

[node name="Lights1" type="Node2D" parent="LightsPlates"]
visible = false
position = Vector2( 96, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light11" parent="LightsPlates/Lights1" instance=ExtResource( 13 )]
position = Vector2( 0, 2048 )

[node name="Light12" parent="LightsPlates/Lights1" instance=ExtResource( 13 )]
position = Vector2( 768, 2048 )

[node name="Lights2" type="Node2D" parent="LightsPlates"]
visible = false
position = Vector2( 96, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light21" parent="LightsPlates/Lights2" instance=ExtResource( 13 )]
position = Vector2( 0, 1536 )

[node name="Light22" parent="LightsPlates/Lights2" instance=ExtResource( 13 )]
position = Vector2( 768, 1536 )

[node name="Lights3" type="Node2D" parent="LightsPlates"]
visible = false
position = Vector2( 96, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light31" parent="LightsPlates/Lights3" instance=ExtResource( 13 )]
position = Vector2( 0, 1024 )

[node name="Light32" parent="LightsPlates/Lights3" instance=ExtResource( 13 )]
position = Vector2( 768, 1048 )

[node name="Lights4" type="Node2D" parent="LightsPlates"]
visible = false
position = Vector2( 96, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light41" parent="LightsPlates/Lights4" instance=ExtResource( 13 )]
position = Vector2( 0, 512 )

[node name="Light42" parent="LightsPlates/Lights4" instance=ExtResource( 13 )]
position = Vector2( 768, 512 )

[node name="Player" parent="." instance=ExtResource( 11 )]
position = Vector2( 480, 3520 )
player_speed = 600

[node name="PlayerCamera" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2, 2 )
limit_left = -1280
limit_top = -640
limit_right = 2560
limit_bottom = 4160
__meta__ = {
"_edit_lock_": true
}

[node name="Message" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="Message"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -304.0
margin_right = 256.0
margin_bottom = 304.0
theme = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Message/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -273.0
margin_right = 219.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.34902, 0.231373, 0.0862745, 1 )
text = "The STARS guide the way...

The LIGHT shall banish the BEAST...

The KEY will set you free."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" parent="." instance=ExtResource( 9 )]
position = Vector2( 480.648, 3207.02 )

[node name="angler_entrance" type="Sprite" parent="."]
position = Vector2( 385.011, 252.243 )
texture = ExtResource( 5 )

[node name="LightLever" parent="." instance=ExtResource( 10 )]
position = Vector2( 481.54, 1521.2 )
rotation = -1.5708

[node name="TileWall" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 320, 320 )
format = 1
tile_data = PoolIntArray( -65540, -1073741803, 0, -65539, -1073741803, 0, -65538, -1073741803, 0, -65537, 0, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 3, 0, -131068, -1610612715, 0, -131067, -1610612715, 0, -131066, -1610612715, 0, -4, -1073741803, 0, -3, -1073741803, 0, -2, -1073741803, 0, -1, 4, 0, -65536, 27, 0, -65535, 27, 0, -65534, 27, 0, -65533, 6, 0, -65532, -1610612715, 0, -65531, -1610612715, 0, -65530, -1610612715, 0, 65532, -1073741803, 0, 65533, -1073741803, 0, 65534, -1073741803, 0, 65535, 4, 0, 3, 6, 0, 4, -1610612715, 0, 5, -1610612715, 0, 6, -1610612715, 0, 131068, -1073741803, 0, 131069, -1073741803, 0, 131070, -1073741803, 0, 131071, 4, 0, 65539, 6, 0, 65540, -1610612715, 0, 65541, -1610612715, 0, 65542, -1610612715, 0, 196604, -1073741803, 0, 196605, -1073741803, 0, 196606, -1073741803, 0, 196607, 4, 0, 131075, 6, 0, 131076, -1610612715, 0, 131077, -1610612715, 0, 131078, -1610612715, 0, 262140, -1073741803, 0, 262141, -1073741803, 0, 262142, -1073741803, 0, 262143, 4, 0, 196611, 6, 0, 196612, -1610612715, 0, 196613, -1610612715, 0, 196614, -1610612715, 0, 327676, -1073741803, 0, 327677, -1073741803, 0, 327678, -1073741803, 0, 327679, 4, 0, 262147, 6, 0, 262148, -1610612715, 0, 262149, -1610612715, 0, 262150, -1610612715, 0, 393212, -1073741803, 0, 393213, -1073741803, 0, 393214, -1073741803, 0, 393215, 4, 0, 327683, 6, 0, 327684, -1610612715, 0, 327685, -1610612715, 0, 327686, -1610612715, 0, 458748, -1073741803, 0, 458749, -1073741803, 0, 458750, -1073741803, 0, 458751, 4, 0, 393219, 6, 0, 393220, -1073741803, 0, 393221, -1073741803, 0, 393222, -1073741803, 0, 524284, -1073741803, 0, 524285, -1073741803, 0, 524286, -1073741803, 0, 524287, 4, 0, 458755, 6, 0, 458756, -1073741803, 0, 458757, -1073741803, 0, 458758, -1073741803, 0, 589820, -1073741803, 0, 589821, -1073741803, 0, 589822, -1073741803, 0, 589823, 10, 0, 524288, 12, 0, 524290, 10, 0, 524291, 12, 0, 524292, -1073741803, 0, 524293, -1073741803, 0, 524294, -1073741803, 0, 655356, -1073741803, 0, 655357, -1073741803, 0, 655358, -1073741803, 0, 655359, 6, 0, 589824, 4, 0, 589826, 6, 0, 589827, 4, 0, 589828, -1073741803, 0, 589829, -1610612715, 0, 589830, -1610612715, 0, 720892, -1073741803, 0, 720893, -1073741803, 0, 720894, -1073741803, 0, 720895, 6, 0, 655360, 4, 0, 655362, 6, 0, 655363, 4, 0, 655364, -1073741803, 0, 655365, -1610612715, 0, 655366, -1610612715, 0, 786428, -1073741803, 0, 786429, -1073741803, 0, 786430, -1073741803, 0, 786431, 6, 0, 720896, 4, 0, 720898, 6, 0, 720899, 4, 0, 720900, -1073741803, 0, 720901, -1073741803, 0, 720902, -1073741803, 0, 851964, -1073741803, 0, 851965, -1073741803, 0, 851966, -1073741803, 0, 851967, 6, 0, 786432, 30, 0, 786433, 31, 0, 786434, 32, 0, 786435, 4, 0, 786436, -1073741803, 0, 786437, -1073741803, 0, 786438, -1073741803, 0 )

[node name="OceanOverlay" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
tile_set = SubResource( 4 )
cell_size = Vector2( 320, 320 )
format = 1
tile_data = PoolIntArray( -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0 )

[node name="MainEnemy" parent="." instance=ExtResource( 14 )]
position = Vector2( 352, 405.791 )
[connection signal="plate_press" from="LightsPlates/Plates/PressurePlate" to="LightsPlates" method="_on_PressurePlate_plate_press"]
[connection signal="timeout" from="LightsPlates/Timer1" to="LightsPlates" method="_on_Timer1_timeout"]
[connection signal="timeout" from="LightsPlates/Timer2" to="LightsPlates" method="_on_Timer2_timeout"]
[connection signal="timeout" from="LightsPlates/Timer3" to="LightsPlates" method="_on_Timer3_timeout"]
[connection signal="timeout" from="LightsPlates/Timer4" to="LightsPlates" method="_on_Timer4_timeout"]
[connection signal="note_clear" from="Message" to="Note" method="_on_Message_note_clear"]
[connection signal="note_collected" from="Note" to="Message" method="_on_Note_note_collected"]
[connection signal="lever_on" from="LightLever" to="." method="_on_LightLever_lever_on"]
